<resources>
    <string name="app_name">Zakupy</string>
    <string name="action_settings">Settings</string>

    <!-- Lista zakupów -->
    <string name="shopping_list_product">Nazwa produktu</string>
    <string name="shopping_list_price">Cena</string>
    <string name="done_button_text">Gotowe</string>
    <string name="edit">Edytuj</string>
    <string name="sum">Suma:</string>
    <string name="empty_list">Lista zakupów jest pusta</string>
    <plurals name="number_of_products_added">
        <item quantity="one">Dodano %d nowy produkt</item>
        <item quantity="few">Dodano %d nowe produkty</item>
        <item quantity="other">Dodano %d nowych produktów</item>
    </plurals>
    <string name="product_bought">Produkt przeniesiono do koszyka</string>
    <string name="product_restored_to_list">Produkt przeniesiono na listę zakupów</string>
    <string name="category">Kategoria</string>
    <string name="no_price">Brak ceny</string>

    <!-- Dodawanie produktów do listy -->
    <string name="title_activity_add_new_item">Dodawanie nowych produktów</string>
    <string name="add_item_button">Dodaj produkt</string>
    <string name="quantity">Ilość</string>

    <!-- Okno dialogowe przy usuwaniu pozycji z listy: -->
    <string name="delete_product_message">Czy usunąć produkt</string>
    <string name="delete_product_extended_message">Spowoduje to usunięcie tego produktu ze wszystkich list zakupów.</string>
    <string name="delete_multiple_products_message">Czy usunąć zaznaczone produkty</string>
    <string name="delete_multiple_products_extended_message">Spowoduje to usunięcie tych produktów ze wszystkich list zakupów.</string>
    <string name="delete_list_message">Czy usunąć listę</string>
    <string name="delete_multiple_lists_message">Czy usunąć zaznaczone listy</string>
    <string name="delete_category_message">Czy usunąć kategorię</string>
    <string name="delete_category_extended_message">Spowoduje to usunięcie tej kategorii ze wszystkich list zakupów.</string>
    <string name="delete_multiple_categories_message">Czy usunąć zaznaczone kategorie</string>
    <string name="delete_multiple_categories_extended_message">Spowoduje to usunięcie tych kategorii ze wszystkich list zakupów.</string>
    <string name="delete_map_message">Czy usunąć mapę</string>
    <string name="delete_map_extended_message">Spowoduje to usunięcie tej mapy ze wszystkich list zakupów.</string>
    <string name="delete_multiple_maps_message">Czy usunąć zaznaczone mapy sklepów</string>
    <string name="delete_multiple_maps_extended_message">Spowoduje to usunięcie tych map ze wszystkich list zakupów.</string>
    <string name="delete">Usuń</string>
    <string name="cancel_button">Anuluj</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- Menu navigation drawer -->
    <string name="shopping_lists">Listy zakupów</string>
    <string name="products">Produkty</string>
    <string name="categories">Kategorie produktów</string>
    <string name="market_maps">Mapy sklepów</string>

    <string name="shopping_list_tab">Lista zakupów</string>
    <string name="shopping_cart_tab">Koszyk</string>
    <string name="title_activity_create_or_edit_list">Tworzenie listy</string>
    <string name="shopping_list_name">Nazwa listy</string>
    <string name="market_map">Mapa sklepu</string>
    <string name="new_map_button">Utwórz nową mapę</string>
    <string name="edit_map_button">Edytuj mapę</string>
    <string name="add_products_button">Edytuj listę</string>
    <string name="new_list_form_message">Najpierw wprowadź nazwę listy i&#160;wybierz mapę sklepu.</string>
    <string name="new_list_form_message_without_map">Najpierw wprowadź nazwę listy.</string>
    <string name="ok_button">OK</string>
    <string name="title_activity_create_or_edit_map">Edycja mapy</string>
    <string name="map_name">Nazwa mapy</string>
    <string name="add_category">Dodaj kategorię</string>
    <string name="map_form_message">Najpierw wprowadź nazwę mapy.</string>

    <string name="buy_button_content_description">Kup</string>
    <string name="menu_button_content_description">Menu</string>
    <string name="clear_button_content_description">Wyczyść</string>
    <string name="new_items_fragment_message">Wprowadź wymagane dane:\n\t&#8226; nazwę produktu,\n\t&#8226; ilość,\n\t&#8226; kategorię.</string>
    <string name="quantity_string">x%1s</string>
    <string name="listAlreadyExistsMessage">Lista o podanej nazwie już istnieje.</string>
    <string name="valuesInvalid">Podane wartości są nieprawidłowe.</string>
    <string name="noProducts">Brak produktów</string>
    <string name="nameAlreadyExists">Podana nazwa już istnieje. Wpisz inną.</string>
    <string name="category_name">Nazwa kategorii</string>
    <string name="no_category">Brak kategorii</string>
    <string name="set_category_button">Ustaw kategorię</string>
    <string name="no_map_check_box">Nie dołączaj mapy</string>
    <string name="category_already_on_list">Kategoria już znajduje się na liście</string>
    <string name="category_already_exists">Kategoria już istnieje</string>

</resources>
