<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item android:id="@+id/nav_shopping_lists"
            android:title="@string/shopping_lists" />
        <item android:id="@+id/nav_products"
            android:title="@string/products" />
        <item android:id="@+id/nav_categories"
            android:title="@string/categories" />
        <item android:id="@+id/nav_market_maps"
            android:title="@string/market_maps" />
    </group>
    <!--
    <item android:title="Communicate">
        <menu>
            <item android:id="@+id/nav_share" android:icon="@android:drawable/ic_menu_share"
                android:title="Share" />
            <item android:id="@+id/nav_send" android:icon="@android:drawable/ic_menu_send"
                android:title="Send" />
        </menu>
    </item>
    -->

</menu>