<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".gui.ListEditorFragment"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:orientation="vertical"
        android:layout_margin="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/shopping_list_name" />

        <EditText
            android:id="@+id/shopping_list_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionDone"
            android:allowUndo="false"
            android:inputType="text" />


        <TextView
            android:id="@+id/market_map_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/market_map"
            android:layout_marginTop="10dp" />

        <Spinner
            android:id="@+id/maret_map_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_horizontal">

            <Button
                android:id="@+id/editMarketMapButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/edit_map_button"
                android:background="@drawable/button_background"
                android:textColor="@android:color/white"
                android:layout_marginRight="10dp"
                android:layout_marginEnd="10dp" />

            <Button
                android:id="@+id/newMarketMapButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/new_map_button"
                android:background="@drawable/button_background"
                android:textColor="@android:color/white" />

        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_alignParentBottom="true"
        android:background="@color/colorPrimary"
        style="?android:attr/buttonBarStyle">


        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:id="@+id/add_products_button"
            android:text="@string/add_products_button"
            style="?android:attr/buttonBarButtonStyle"
            android:textColor="@android:color/white" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:id="@+id/done_button"
            android:text="@string/done_button_text"
            style="?android:attr/buttonBarButtonStyle"
            android:textColor="@android:color/white" />

    </LinearLayout>

</RelativeLayout>
