<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".gui.MarketMapEditorActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:orientation="vertical"
        android:layout_margin="10dp">

        <android.support.design.widget.TextInputLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:id="@+id/map_name_text_layout">

            <EditText
                android:id="@+id/map_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/map_name" />
        </android.support.design.widget.TextInputLayout>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/map_content_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_alignParentBottom="true"
        android:background="@color/colorPrimary"
        style="?android:attr/buttonBarStyle">


        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:id="@+id/add_products_button"
            android:text="@string/add_category"
            style="?android:attr/buttonBarButtonStyle"
            android:textColor="@android:color/white"
            android:onClick="addButtonClick" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:id="@+id/done_button"
            android:text="@string/done_button_text"
            style="?android:attr/buttonBarButtonStyle"
            android:textColor="@android:color/white"
            android:onClick="doneButtonClick" />

    </LinearLayout>

</RelativeLayout>
