<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/shopping_list_layout">

    <android.support.v7.widget.CardView
        android:id="@+id/shopping_list_item"
        android:layout_gravity="top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        
        <android.support.v7.widget.GridLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp">

        <android.support.design.widget.TextInputLayout
            app:layout_column="1"
            app:layout_row="0"
            app:layout_columnWeight="1">
            <AutoCompleteTextView
                android:id="@+id/product_name_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/shopping_list_product"
                android:inputType="textAutoComplete"
                android:imeOptions="actionDone"
                android:visibility="gone"/>
        </android.support.design.widget.TextInputLayout>

        <TextView
            android:id="@+id/product_name"
            app:layout_column="1"
            app:layout_row="0"
            app:layout_columnWeight="1"
            app:layout_gravity="center_vertical"
            android:textSize="20sp"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"/>

        <ImageButton
            app:layout_column="3"
            app:layout_row="0"
            android:visibility="gone"
            android:id="@+id/clear_product_name"
            app:layout_gravity="center_vertical"
            android:background="@drawable/ic_clear_black_24dp"/>

        <ImageButton
            app:layout_column="3"
            app:layout_row="1"
            android:visibility="gone"
            android:id="@+id/clear_price"
            app:layout_gravity="center_vertical"
            android:background="@drawable/ic_clear_black_24dp"/>

        <android.support.design.widget.TextInputLayout
            app:layout_column="1"
            app:layout_row="1"
            app:layout_columnWeight="1">
            <EditText
                android:id="@+id/price_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/shopping_list_price"
                android:inputType="numberDecimal"
                android:imeOptions="actionDone"
                android:visibility="gone"/>
        </android.support.design.widget.TextInputLayout>

        <TextView
            android:id="@+id/price"
            app:layout_column="1"
            app:layout_row="1"
            app:layout_columnWeight="1"
            app:layout_gravity="center_vertical"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"/>

        <Spinner
            android:id="@+id/product_category"
            app:layout_column="1"
            app:layout_columnSpan="2"
            app:layout_row="2"
            app:layout_columnWeight="1"
            android:visibility="gone">

        </Spinner>

        <CheckBox
            android:id="@+id/buyCheckBox"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_marginRight="10dp"
            android:layout_marginEnd="10dp"
            app:layout_column="0"
            app:layout_row="0"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_column="0"
            app:layout_row="1"
            app:layout_rowSpan="1"
            app:layout_columnWeight="0"
            android:layout_marginTop="10dp">

            <ImageButton
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:id="@+id/edit_button"
                android:layout_marginRight="20dp"
                android:layout_marginEnd="20dp"
                app:layout_gravity="center_vertical"
                android:background="@drawable/ic_mode_edit_black_24dp"
                android:contentDescription="@string/edit_button" />

            <ImageButton
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:id="@+id/delete_button"
                android:layout_marginRight="10dp"
                android:layout_marginEnd="10dp"
                android:background="@drawable/ic_delete_black_24dp" />

        </LinearLayout>

        <Button
            android:id="@+id/done_button"
            app:layout_row="3"
            app:layout_column="1"
            app:layout_gravity="right"
            android:layout_marginTop="10dp"
            style="?android:attr/borderlessButtonStyle"
            android:text="@string/done_button_text"
            android:visibility="gone"/>


        </android.support.v7.widget.GridLayout>
    </android.support.v7.widget.CardView>

</LinearLayout>
